Add no-console lint rule

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
             ],
             "linebreak-style": "off",
             "no-trailing-spaces": "error",
+            "no-console": "error",
             "prefer-const": [
                 "error",
                 {
