Add require-atomic-updates lint rule

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
             "no-unmodified-loop-condition": "error",
             "no-unused-private-class-members": "error",
             "prefer-const": [ "error", { "destructuring": "all" } ],
+            "require-atomic-updates": "error",
             "semi": [ "error", "always" ]
         },
         "globals": {
