--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
             "linebreak-style": "off",
             "no-await-in-loop": "error",
             "no-console": "error",
+            "no-constructor-return": "error",
             "no-trailing-spaces": "error",
             "no-unmodified-loop-condition": "error",
             "no-unused-private-class-members": "error",
