Add no-unreachable-loop lint rule

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
             "no-template-curly-in-string": "error",
             "no-trailing-spaces": "error",
             "no-unmodified-loop-condition": "error",
+            "no-unreachable-loop": "error",
             "no-unused-private-class-members": "error",
             "prefer-const": [ "error", { "destructuring": "all" } ],
             "require-atomic-updates": "error",
